2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.{cc,h}: Remove "regexxer info" page.  Split up
	configuration into "Look'n'feel" and "File access" pages.  Add
	UI and class interface for the new menutool_mode config option.

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.{cc,h}: New files, implementing stand-alone
	about dialog for regexxer.

	* src/Makefile.am: Add new files.

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/configdata.{cc,h}: Add support for menutool_mode config
	option, specifying whether to show menu bar, toolbar or both.

2002-11-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (regexxer_register_stock_items): Always set the
	intended icon size, but disable wildcarding for all but the last
	pixbuf in an icon set.

2002-11-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* pixmaps/stock_save_all_16.png: New menu icon.
	* pixmaps/Makefile.am: Add new icon.
	* src/main.cc: Register new icon.

2002-11-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.cc (ControlItem::add_widget): Honor group_enabled_.

2002-11-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc: Change default size of the window to 600x450
	because the new menu bar takes up quite some space.

2002-11-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.cc (ControlItem::activate): Don't ignore the
	group_enabled_ flag.

2002-11-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.{cc,h} (create_menubar): Implement.
	* src/mainwindow.cc: Show the menu bar, and make both toolbar and
	menu bar detachable.

2002-11-17  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/controller.{cc,h}: New files, implementing class Controller
	and class ControlItem.  ControlItem maintains an arbitrary number
	of activation sources, and controls the sensitivity state of an
	arbitrary number of widgets too.  Controller centralizes all of